--- a/src/qt/forms/addressbookpage.ui
+++ b/src/qt/forms/addressbookpage.ui
@@ -17,7 +17,7 @@
    <item>
     <widget class="QLabel" name="labelExplanation">
      <property name="text">
-      <string>These are your Wager addresses for receiving payments. You may want to give a different one to each sender so you can keep track of who is paying you. You may also choose to create a NightSend Address to receive anonyminized payments.</string>
+      <string>These are your Wager address' for receiving payments.</string>
      </property>
      <property name="textFormat">
       <enum>Qt::PlainText</enum>
